objects/Quote__c.object
<CustomObject>
    <description>Quote</description>
    <fields>
        <fullName>ApprovalLevelMax__c</fullName>
        <description>The Quote&apos;s approval level decided by the max approval level of quote lines.</description>
        <label>Approval Level Max</label>
        <summarizedField>Quote_Line__c.ApprovalLevel__c</summarizedField>
        <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_Level_Needed__c</fullName>
        <description>Equals to the max approval level of the quote lines</description>
        <formula>MAX(
if( Quote_Discount__c &lt;0,3,0),
IF(and(ispickval( Opportunity__r.Type ,&apos;Training/WanStart&apos;), ( Opportunity__r.Account.IsAPartner__c &lt;&gt;1 )),3,0),
ApprovalLevelMax__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if( Level3Required__c =1,3,

MAX(ApprovalLevelMax__c,
Approval_Required__c,
if(Opportunity__r.Primary_Partner__r.CreditHold__c,2,0) ,
if( Service_Discount_Max__c &gt; RegPartServDisc__c ,3,0)
))</inlineHelpText>
        <label>Approval Level Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check this box in the approval stage and then only uncheck it if the discount percentage changes again</description>
        <label>Approval Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <description>Formula for Quote Approval Matrix - 06-12-10: IF(or( 
AND( 
OR( 
and(Discount_Max__c &gt; 0.35, Discount_Max__c &gt; RegPartProdDisc__c ), 
Average_Discount__c &gt; 0.0, 
and( Service_Discount_Max__c &gt; 0.15, Service_Discount_Max__c &gt; RegPartServDisc__c )), 
Approval_Made__c =FALSE), OR(and(ConsultingDiscountMax__c &gt;0,Opportunity__r.Account.IsAPartner__c =0) ,AND(ConsultingDiscountMax__c &gt;0.50, Opportunity__r.Account.IsAPartner__c =1))), 
1, 0)
Updated for tiering 6-24-2010
IF(or( 
AND( 
OR( 
and(Discount_Max__c &gt; 0.35, Discount_Max__c &gt; RegPartProdDisc__c ), 
Average_Discount__c &gt; 0.0, 
and( OR( and(Service_Discount_Max__c &gt; 0.21, MultiYearValue__c =2), and(Service_Discount_Max__c &gt; 0.27, MultiYearValue__c =3), Service_Discount_Max__c &gt; 0.15), Service_Discount_Max__c &gt; RegPartServDisc__c )), 
Approval_Made__c =FALSE), OR(and(ConsultingDiscountMax__c &gt;0,Opportunity__r.Account.IsAPartner__c =0) ,AND(ConsultingDiscountMax__c &gt;0.50, Opportunity__r.Account.IsAPartner__c =1))), 
1, 0)</description>
        <formula>If(
OR(Approval_Level_Needed__c &gt;0, Level3Required__c==1)
,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Use for workflow and approval processes</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Discount__c</fullName>
        <formula>if( Quote_Amount_Rollup__c&gt;0, -(Quote_Discount__c /  Quote_Amount_Rollup__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Discount %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account__c</fullName>
        <formula>if( Override_Bill_To__c , &quot;&quot; , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) , Opportunity__r.Account.Name  ,  PreparedFor__r.Account.Name))</formula>
        <label>Bill To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingStreet ,  PreparedFor__r.Account.BillingStreet )</description>
        <formula>if(  Override_Bill_To__c ,  Billing_Address__c , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingStreet ,  PreparedFor__r.Account.BillingStreet ))</formula>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingCity ,  PreparedFor__r.Account.BillingCity )</description>
        <formula>if(  Override_Bill_To__c ,  Billing_City__c , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingCity ,  PreparedFor__r.Account.BillingCity ))</formula>
        <label>Bill To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingCountry ,  PreparedFor__r.Account.BillingCountry )</description>
        <formula>if(  Override_Bill_To__c ,  Billing_Country__c , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingCountry ,  PreparedFor__r.Account.BillingCountry ))</formula>
        <label>Bill To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingState ,  PreparedFor__r.Account.BillingState )</description>
        <formula>if(  Override_Bill_To__c ,  Billing_State__c , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingState ,  PreparedFor__r.Account.BillingState ))</formula>
        <label>Bill To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingPostalCode ,  PreparedFor__r.Account.BillingPostalCode )</description>
        <formula>if(  Override_Bill_To__c ,  Billing_Postal_Code__c , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.BillingPostalCode ,  PreparedFor__r.Account.BillingPostalCode ))</formula>
        <label>Bill To Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <description>Used to Override the Bill To Address Information on the quote</description>
        <inlineHelpText>Used to Override the Bill To Address Information on the quote</inlineHelpText>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <description>Used to Override the Bill To Address Information on the quote</description>
        <inlineHelpText>Used to Override the Bill To Address Information on the quote</inlineHelpText>
        <label>Billing City</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>Used to Override the Bill To Address Information on the quote</description>
        <inlineHelpText>Used to Override the Bill To Address Information on the quote</inlineHelpText>
        <label>Billing Country</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <description>Used to Override the Bill To Address Information on the quote</description>
        <inlineHelpText>Used to Override the Bill To Address Information on the quote</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <description>Used to Override the Bill To Address Information on the quote</description>
        <inlineHelpText>Used to Override the Bill To Address Information on the quote</inlineHelpText>
        <label>Billing State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsultingDiscountMax__c</fullName>
        <label>Consulting Discount Max</label>
        <summarizedField>Quote_Line__c.Discount_Percent__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.Include4ConsultingDisc__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Justification__c</fullName>
        <inlineHelpText>Note to send to approvers to communicate reason for requesting the discount</inlineHelpText>
        <label>Discount Justification</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Max__c</fullName>
        <label>Product Discount Max</label>
        <summarizedField>Quote_Line__c.Discount_Percent__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.Include4Discount__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EC_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EC Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this box if you want to generate a quote document that has no pricing on it (i.e. an EMC or HDS configuration outline).</inlineHelpText>
        <label>Hide Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelectedForApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSelectedForApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level3Required__c</fullName>
        <formula>if(
Or(Opportunity__r.Primary_Partner__r.CreditHold__c , not( Opportunity__r.Primary_Partner__r.Reseller_Agreement__c ))
,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreditHold/Reseller Agreement Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matches_Opportunity__c</fullName>
        <description>IF( AND( Primary__c = True, 
OR((Opportunity_Amount__c - Quote_Amount_Rollup__c) &lt;100 ,(Quote_Amount_Rollup__c - Opportunity_Amount__c )&lt;100  )
 ) , 0, 1)</description>
        <formula>IF( AND( Primary__c = True, 
OR((Opportunity_Amount__c - Quote_Amount_Rollup__c) &lt;100 ,(Quote_Amount_Rollup__c - Opportunity_Amount__c )&lt;100  )
 ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF( AND( Primary__c = True, Opportunity_Amount__c = Quote_Amount_Rollup__c  ) , 0, 1)</inlineHelpText>
        <label>Matches Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiYearValue__c</fullName>
        <description>What is the maximum multi year value</description>
        <label>MultiYearValue</label>
        <summarizedField>Quote_Line__c.Include4MultiYYear__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.Include4MultiYYear__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Quote_Lines__c</fullName>
        <label>Number of Quote Lines</label>
        <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opp Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Silver_Peak_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Geo_Region__c</fullName>
        <formula>Opportunity__r.GEO_Region__c</formula>
        <label>Opportunity Geo Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Override the Bill To Address Information on the quote</description>
        <inlineHelpText>Used to Override the Bill To Address Information on the quote</inlineHelpText>
        <label>Override Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override the account shipping address for this quote</description>
        <inlineHelpText>Override the account shipping address for this quote</inlineHelpText>
        <label>Override Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerCreditHold__c</fullName>
        <formula>if( Opportunity__r.Primary_Partner__r.CreditHold__c ,&quot;On Credit Hold&quot;, &quot;No Holds&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Credit Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Discount_Level__c</fullName>
        <formula>Opportunity__r.Partner_Discount_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Discount Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PaymentTermInstructions__c</fullName>
        <label>Payment Term Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cond PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Demo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreparedFor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prepared For</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Address__c</fullName>
        <inlineHelpText>Use this to choose which address is to be used on the quote output</inlineHelpText>
        <label>Quote Address</label>
        <picklist>
            <picklistValues>
                <fullName>Prepared For Contact</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Amount_Rollup__c</fullName>
        <label>Quote Amount Rollup</label>
        <summarizedField>Quote_Line__c.Line_Price__c</summarizedField>
        <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Date__c</fullName>
        <description>Quote Date</description>
        <label>Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Discount_Percent__c</fullName>
        <label>Quote Discount Percent</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote_Discount__c</fullName>
        <inlineHelpText>Discount % from list</inlineHelpText>
        <label>Quote Discount Sum</label>
        <summarizedField>Quote_Line__c.Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.Line_Price__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Valid_Until__c</fullName>
        <description>Quote Valid Until</description>
        <label>Quote Valid Until</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegPartProdDisc__c</fullName>
        <formula>MAX(Opportunity__r.Registered_Partner__r.Registered_Discount_EdgeConnect__c ,
 Opportunity__r.Registered_Partner__r.Standard_Discount_EdgeConnect__c,
 Opportunity__r.Primary_Partner__r.Registered_Discount_EdgeConnect__c ,
 Opportunity__r.Primary_Partner__r.Standard_Discount_EdgeConnect__c,
 Opportunity__r.Account.Product_Discount__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this is maximum discount available without requiring approval for a quote on a given opportunity. It is the greater of the primary partner negotiated discount rates or the customer negotiated discount rates.</inlineHelpText>
        <label>Partner Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RegPartServDisc__c</fullName>
        <formula>Max( Opportunity__r.Registered_Partner__r.Registered_Discount_Service__c ,
 Opportunity__r.Registered_Partner__r.Standard_Discount_Service__c,
 Opportunity__r.Primary_Partner__r.Registered_Discount_Service__c ,
 Opportunity__r.Primary_Partner__r.Standard_Discount_Service__c,
 Opportunity__r.Account.Maintenance_Discount__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this is maximum discount available without requiring approval for a quote on a given opportunity. It is the greater of the primary partner negotiated discount rates or the customer negotiated discount rates.</inlineHelpText>
        <label>Partner Service Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <label>Renewal Term</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reseller_EdgeConnect_Discount__c</fullName>
        <formula>Opportunity__r.Primary_Partner__r.Registered_Discount_EdgeConnect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller EdgeConnect Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reseller_NX_VX_Discount__c</fullName>
        <formula>Opportunity__r.Primary_Partner__r.Registered_Discount_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller NX/VX Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reseller_Service_Discount__c</fullName>
        <formula>Opportunity__r.Primary_Partner__r.Registered_Discount_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reseller Service Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Discount_Max__c</fullName>
        <label>Service Discount Max</label>
        <summarizedField>Quote_Line__c.Discount_Percent__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Line__c.Include4ServiceDiscount__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingStreet ,  PreparedFor__r.Account.ShippingStreet )</description>
        <formula>if(  Override_Ship_To__c , Shipping_Address__c ,IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingStreet ,  PreparedFor__r.Account.ShippingStreet ))</formula>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingCity ,  PreparedFor__r.Account.ShippingCity )</description>
        <formula>if(  Override_Ship_To__c , Shipping_City__c , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingCity ,  PreparedFor__r.Account.ShippingCity ))</formula>
        <label>Ship To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingCountry ,  PreparedFor__r.Account.ShippingCountry )</description>
        <formula>if(  Override_Ship_To__c ,  Shipping_Country__c , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingCountry ,  PreparedFor__r.Account.ShippingCountry ))</formula>
        <label>Ship To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingState ,  PreparedFor__r.Account.ShippingState )</description>
        <formula>if(  Override_Ship_To__c ,  Shipping_State__c , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingState ,  PreparedFor__r.Account.ShippingState ))</formula>
        <label>Ship To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <description>IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingPostalCode ,  PreparedFor__r.Account.ShippingPostalCode )</description>
        <formula>if(  Override_Ship_To__c ,  Shipping_Postal_Code__c , IF( ISPICKVAL( Quote_Address__c ,&quot;Opportunity Account&quot;) ,Opportunity__r.Account.ShippingPostalCode ,  PreparedFor__r.Account.ShippingPostalCode ))</formula>
        <label>Ship To Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <description>Override the account shipping address for this quote</description>
        <inlineHelpText>Override the account shipping address for this quote</inlineHelpText>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <description>Override the account shipping address for this quote</description>
        <inlineHelpText>Override the account shipping address for this quote</inlineHelpText>
        <label>Shipping City</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <description>Override the account shipping address for this quote</description>
        <inlineHelpText>Override the account shipping address for this quote</inlineHelpText>
        <label>Shipping Country</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <description>Override the account shipping address for this quote</description>
        <inlineHelpText>Override the account shipping address for this quote</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <description>Override the account shipping address for this quote</description>
        <inlineHelpText>Override the account shipping address for this quote</inlineHelpText>
        <label>Shipping State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowDiscount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Subtotal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this checkbox if you want to generate a document with subtotals on Maintenance/Product/Service</inlineHelpText>
        <label>Show Subtotal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Virtual_Alternatives__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Virtual Alternatives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <defaultValue>&quot;Pricing shown is transfer prices from Silver Peak to Reseller, NOT End-user pricing.&quot;</defaultValue>
        <label>Special Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage</description>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presented</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SteelBrick_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SteelBrick Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Silver Peak Quotes</relationshipLabel>
        <relationshipName>SteelBrickQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TmpApprovalRequired__c</fullName>
        <formula>IF(or( 
AND(
OR(
and(Discount_Max__c &gt; 0.35, Discount_Max__c &gt;  RegPartProdDisc__c ), 
Average_Discount__c &gt; 0.0,
and( Service_Discount_Max__c  &gt; 0.15, Service_Discount_Max__c  &gt;   RegPartServDisc__c  )), 
Approval_Made__c =FALSE), OR(and(ConsultingDiscountMax__c &gt;0,Opportunity__r.Account.IsAPartner__c =0) ,AND(ConsultingDiscountMax__c &gt;0.50, Opportunity__r.Account.IsAPartner__c =1))), 
1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TmpApprovalRequired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_At_List__c</fullName>
        <label>Value At List</label>
        <summarizedField>Quote_Line__c.Product_List__c</summarizedField>
        <summaryForeignKey>Quote_Line__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Silver Peak Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Quote_Date__c</columns>
        <columns>PreparedFor__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Approval_Made__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q{00000000}</displayFormat>
        <label>Quote ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Silver Peak Quotes</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cant_Show_Discounts_and_Hide_Prices</fullName>
        <active>true</active>
        <description>Ensure that show discount is disabled if you want to hide pricing</description>
        <errorConditionFormula>and( Hide_Pricing__c , ShowDiscount__c )</errorConditionFormula>
        <errorDisplayField>ShowDiscount__c</errorDisplayField>
        <errorMessage>In order to hide pricing you must disable show discounts too</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prepared_For_should_derive_from_Primary</fullName>
        <active>false</active>
        <errorConditionFormula>Opportunity__r.Primary_Partner__c != PreparedFor__r.AccountId</errorConditionFormula>
        <errorMessage>Please select right prepared for</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check_Opportunity_Pricebook</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity__r.Pricebook2Id = NULL</errorConditionFormula>
        <errorMessage>There is no pricebook for the specified opportunity.</errorMessage>
    </validationRules>
</CustomObject>